# PawnX64

./: .clang-format  CMakeLists.txt  README.md  build-alpine.sh  build-rhel7.sh  build-rhel8.sh
.github/workflows/: ci.yml
amx64/: CMakeLists.txt
amx64/include/: amx.h  amx_loader.h
amx64/src/: amx.cpp  amx_compile.cpp  amx_internal.hpp  amx_loader.cpp  amx_loader_internal.hpp  amx_posix.cpp  amx_windows.cpp  ensure_c_compatibility.c
amx64_test/: CMakeLists.txt  test.amx  test.p
amx64_test/src/: main.cpp
pawnrun/: CMakeLists.txt
pawnrun/src/: main.cpp
signalmgr/: CMakeLists.txt
signalmgr/include/: signalmgr.h
signalmgr/src/: signalmgr.cpp
